[gd_scene load_steps=8 format=2]

[ext_resource path="res://mrjab.gd" type="Script" id=1]
[ext_resource path="res://Enemies/baseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Tileset.png" type="Texture" id=3]
[ext_resource path="res://Enemies/SpikeParticles.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 51, 39, 10, 25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 76, 38.5 )

[node name="enemy" instance=ExtResource( 2 )]
collision_mask = 3
script = ExtResource( 1 )
mode = 3
particles = ExtResource( 4 )

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( -2.5, -12.5 )
frames = SubResource( 2 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]
visible = false
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, 3, 2, -3, 2 )

[node name="mapCollider" parent="." index="2"]
shape = null

[node name="startRange" parent="." index="3"]
visible = true

[node name="collider" parent="startRange" index="0"]
visible = false
position = Vector2( 0, -38.5 )
shape = SubResource( 4 )

[node name="collider" parent="stopRange" index="0"]
shape = null

[node name="hitbox" parent="." index="5"]
visible = true
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox" index="0"]
visible = false
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, 3, 2, -3, 2 )

[node name="collider" parent="hitbox" index="1"]
shape = null

[node name="touchBox" type="Area2D" parent="." index="6" groups=["enemy"]]
position = Vector2( 0, -0.5 )
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="touchBox" index="0"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, -1, -10, 1, -10 )

[node name="Light2D" parent="." index="7"]
visible = false

[node name="AimTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="AttackDelay" type="Timer" parent="." index="9"]
one_shot = true

[connection signal="body_entered" from="touchBox" to="." method="_onTipHit"]
[connection signal="timeout" from="AimTimer" to="." method="_onAimEnd"]
[connection signal="timeout" from="AttackDelay" to="." method="_onTargetDelayEnd"]
